[package]
name = "gortsz"
description = "A rust #![no_std] time series compressor based on the Gorilla whitepaper."
license = "MIT OR Apache-2.0"
keywords = ["embedded", "compression", "time-series"]
categories = ["compression"]
homepage = "https://strathseds.org"
repository = "https://github.com/X-yl/gortsz"
version = "0.1.5"
edition = "2024"

[features]
default = ["serde"]
serde = ["bitvec/serde"]

[dependencies]
bitvec = { version="1.0.1", default-features=false  }
heapless = "0.8.0"

[dev-dependencies]
const-str = "0.6.2"
